--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ html, body{
   src: url(./fonts/Square.ttf) format("truetype");
 }
 
+.body {
+  background-color: black;
+}
+
 .bg {
   position: absolute;
   top: 0;
@@ -56,7 +60,6 @@ html, body{
   position: relative;
   height: 100vh;
   width: 100%;
-  background: white;
 }
 
 .fog-container {
