--- a/style.css
+++ b/style.css
@@ -270,10 +270,14 @@ html, body{
     width: 500px;
   }
   html { 
-    height: 100%;
+    height: 2500px;
   }
   .fog-container{
-    height: 100vh;
+    height: 2500px;
+  }
+  .fog-img {
+    background-size: cover;
+    height: 100%;
   }
 
 }
