rough draft done

--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ a {
   -webkit-user-select: none;
   touch-action: manipulation;
   width: auto;
+  font-family: Square;
 }
 
 .button-40:hover {
@@ -235,6 +236,7 @@ a {
 
 /* Characters */
 .characterList{
+  margin-top: 40px;
   position: absolute;
   display: flex;
   align-items: center;
@@ -247,7 +249,7 @@ a {
   padding: 10px;
   margin-left: 4%;
   margin-right: 4%;
-  margin-top: 18%;
+  margin-top: 25%;
   text-align: center;
   height: 450px;
   width: 250px;
@@ -288,7 +290,8 @@ a {
 .stats li {
   display: inline-block;
   text-decoration: none;
-  
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .imgBox img{
@@ -308,3 +311,4 @@ a {
   min-width: 500px;
   max-width: 800px;
 }
+
