--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ a {
   -webkit-user-select: none;
   touch-action: manipulation;
   width: auto;
-  font-family: Square;
+  font-family: "Square";
 }
 
 .button-40:hover {
