--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* Fog Overlay Credits to https://www.youtube.com/watch?v=arthjRwm5VU */
+
+
 html, body{
   margin: 0;
   padding: 0;
@@ -16,6 +19,8 @@ html, body{
   src: url(./fonts/Square.ttf) format("truetype");
 }
 
+
+/* Intro Screen */
 #body {
   background-color: black;
 }
@@ -141,7 +146,6 @@ a {
   }
 }
 
-/* Home Page */
 
 
 /* button styling */
@@ -234,7 +238,7 @@ a {
 }
 
 
-/* Characters */
+/* Character List Page */
 .characterList{
   margin-top: 40px;
   position: absolute;
@@ -266,9 +270,6 @@ a {
   width: 220px;
 }
 
-.funeral img:hover {
-
-}
 
 .characterItem:hover{
   box-shadow: 0 5px 35px 0px rgba(234, 232, 232, 0.803);
@@ -286,13 +287,7 @@ a {
 }
 
 
-
-
-/* Skills Buttons */
-
-
-
-/* Individual Pages */
+/* Individual Character Pages */
 .characterBioBox {
   padding-top: 10%;
   display: inline-block;
